--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ td.Red {
   <button type="button" id="left-click" class="left-button btn btn-floating"  data-mdb-ripple-color="dark">
   <i class="fas fa-angle-left fa-3x"></i></button>
 
-  <span id="slideLabel">><input type="range" value="1" min="1" max="6" class="slider navbar-toggler" id="range" title=""></span>
+  <input type="range" value="1" min="1" max="6" class="slider navbar-toggler" id="range" title=""><span id="slideLabel">></span>
 
 <button type="button" id="right-click" class="btn btn-floating right-button "
 data-mdb-ripple-color="dark">
@@ -199,17 +199,6 @@ data-mdb-ripple-color="dark">
 
   <div class="col-lg-6 mb-4" id="right-content">
 
-<ol class="text-right">
-  <li id="some-id">Unique element</li>
-  <li>Another list element</li>
-  <li>
-    <p>Paragraph inside list element</p>
-    <p>Second paragraph</p>
-  </li>
-</ol>
-  <!-- Using listeners -->
-  <h1 id="click-me">Click on me!</h1>
-  <p class="hover-me">Hover over me!</p>
 
 </div>
 </div>
