--- a/index.html
+++ b/index.html
@@ -628,12 +628,12 @@ var	content = d3.select("#right-content");
 content.append('h4').text('Where does fluoride come from?').attr('class','font-italic');
 
 content.append("ul").attr('class','text-right').append('li')
-  .text("Much .")
-  .append('li').text("Most municipal water systems have to add fluoride to their supply as most watersheds in America are not fluoridated.")
-  .append('li').text("Since the 1970s, a major source of these fluoride salts was fluorosilic acid, a byproduct of fertilizer production that is largely untreated and contains trace contaminants.");
+  .append('li').text("The majority of municipal water systems have to add fluoride to their supply as most watersheds in America are not fluoridated.")
+  .append('li').text("Since the 1970s, a major source of these fluoride salts was fluorosilic acid, a byproduct of fertilizer production that is largely untreated and contains trace contaminants.").
 
 content.append('ul')
-.append('li').text("Another important source of fluoride is toothpaste, with pharmaceutical-grade sodium flouride usually named as the active ingredient.")
+.append('li').text("Another important source of fluoride is toothpaste, with pharmaceutical-grade sodium fluoride usually named as the active ingredient.")
+.append('li').text("Interestingly, since fluoride tends to collect in the skeletal calcium deposits, mechanically de-boned chicken products (e.g. chicken nuggets) are in fact an significant source of fluoride ingestion.")
 .append('li').text("Finally, fluoride is also used as an important pesticide. mostly in the form of cryolite which is common in grape and wine production.");
 
 
