--- a/index.html
+++ b/index.html
@@ -323,12 +323,12 @@ svg.append("image").attr("xlink:href","img/giphy.gif");
 content.append('h4').text('What is Fluoride?').attr('class','font-italic');
 
 content.append("ul").attr('class','text-right').append('li')
-  .text("According to the National Institute of Health, fluoride is the name given to a group of compounds that are composed of naturally occuring elemnt fluorine and one or more other elements.")
-  .append('li').text("In other words, 'flouride' is a negatively charged ion of fluorine, the most electronegative of all of the  halogen (salt-generating) gases and indeed of all elements on the periodic table.")
+  .text("According to the National Institute of Health, fluoride is the name given to a group of compounds that are composed of naturally occurring element fluorine and one or more other elements.")
+  .append('li').text("In other words, 'fluoride' is a negatively charged ion of fluorine, the most electronegative of all of the  halogen (salt-generating) gases and indeed of all elements on the periodic table.")
   .append('li').text("This makes it highly reactive, especially with certain minerals in the body like calcium.");
 
 content.append('ul')
-.append('li').text("Approximately half of all fluoride ingested  is absorbed by the bodywithin 30 minutes, where it largely collects in calcified tissue.")
+.append('li').text("Approximately half of all fluoride ingested  is absorbed by the body within 30 minutes, where it largely collects in calcified tissue.")
 .append('li').text("In children, studies suggest that up to 80% of fluoride remains in the body, largely in the teeth and other bone structures.");
 
 content.append('ul')
@@ -471,7 +471,7 @@ content.append('h4').text('History of Fluoridation the United States').attr('cla
 content.append("ul").attr('class','text-right').append('li')
   .text("Before the 1940s, there was no addition of fluoride salts to municipal water supplies anywhere in the world.")
   .append('li').text("Indeed before the establishment of the FDA in the Food, Drug and Cosmetic Act of 1938, there was no recorded medical use of fluoride.")
-  .append('li').text("However, it was sold commonly as rat poision");
+  .append('li').text("However, it was sold commonly as rat poison");
 
 content.append('ul')
 .append('li').text("That said, in the 1940s, scientists discovered that people drinking from water supplies that had high levels of fluoride had fewer dental cavities than other places.")
@@ -625,16 +625,16 @@ svg.append("text")
 
 var	content = d3.select("#right-content");
 
-content.append('h4').text('Where does fluoride come from?').attr('class','font-italic');
+  content.append('h4').text('Where does fluoride come from?').attr('class','font-italic');
 
-content.append("ul").attr('class','text-right').append('li')
-  .append('li').text("The majority of municipal water systems have to add fluoride to their supply as most watersheds in America are not fluoridated.")
-  .append('li').text("Since the 1970s, a major source of these fluoride salts was fluorosilic acid, a byproduct of fertilizer production that is largely untreated and contains trace contaminants.").
+  content.append("ul").attr('class','text-right').append('li')
+    .append('li').text("The majority of municipal water systems have to add fluoride to their supply as most watersheds in America are not fluoridated.")
+    .append('li').text("Since the 1970s, a major source of these fluoride salts was fluorosilic acid, a byproduct of fertilizer production that is largely untreated and contains trace contaminants.");
 
-content.append('ul')
-.append('li').text("Another important source of fluoride is toothpaste, with pharmaceutical-grade sodium fluoride usually named as the active ingredient.")
-.append('li').text("Interestingly, since fluoride tends to collect in the skeletal calcium deposits, mechanically de-boned chicken products (e.g. chicken nuggets) are in fact an significant source of fluoride ingestion.")
-.append('li').text("Finally, fluoride is also used as an important pesticide. mostly in the form of cryolite which is common in grape and wine production.");
+  content.append('ul')
+  .append('li').text("Another important source of fluoride is toothpaste, with pharmaceutical-grade sodium fluoride usually named as the active ingredient.")
+  .append('li').text("Interestingly, since fluoride tends to collect in the skeletal calcium deposits, mechanically de-boned chicken products (e.g. chicken nuggets) are in fact an significant source of fluoride ingestion.")
+  .append('li').text("Finally, fluoride is also used as an important pesticide. mostly in the form of cryolite which is common in grape and wine production.");
 
 
 
@@ -728,7 +728,7 @@ content.append('h4').text('What are the advantages to fluoridation?').attr('clas
 
 content.append("ul").attr('class','text-right').append('li')
 .text("Worldwide oral health has improved substantially over the past 50 years, and interestingly, most of developed world has improved rather uniformly over time.")
-.append('li').text("Much of this can credited to the rise of fluoride toothpastes, which deliver a high dose of mineralizing fluoride topically/directly to the teeth, without needing to be swalloed.")
+.append('li').text("Much of this can credited to the rise of fluoride toothpastes, which deliver a high dose of mineralizing fluoride topically/directly to the teeth, without needing to be swallowed.")
   .append('li').text("Certainly other baseline improvements to public health and hygiene have contributed to this steady improvement.");
 
 content.append('ul')
